# plank_lightpad

./: .gitignore  README  README.md  how_to_install.txt
.devcontainer/: devcontainer.json  dockerfile.vala.debian  vala-language-server_0.48.5-1_amd64.deb
data/: gnome-applications.menu  net.launchpad.plank.gschema.xml.in
docklets/: meson.build
docklets/Lightpad/: Application.vala  Blur.vala  Config.vala  LightpadDockItem.vala  LightpadDocklet.vala  Resources.vala  lightpad.gresource.xml  meson.build  meson.build.bak
docklets/Lightpad/Widgets/: AppItem.vala  CompositedWindow.vala  Indicators.vala
lib/: gtk-compat.c  gtk-compat.h  plank.deps
lib/Docklets/: DockletManager.vala
